fixing spacing

--- a/styles/header.css
+++ b/styles/header.css
@@ -36,17 +36,19 @@ header a svg {
   width: 30px;
 }
 
+header #header-left{
+  padding-right: 90px; 
+}
+
 header #header-right > *{
   padding: 0 5px;
 }
 
-@media (min-width:768px){
-  header #header-left{
-    /* min-width: 120px;*/
-    padding-right: 70px; 
-  }
+header div,
+header input{
+  margin:0px;
+  padding:0px;
 }
-
 
 @media (max-width:768px){
   header{
